[package]
name = "fri_finder"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.7", features = ["blocking", "json"]}
serde = {version = "1.0.115", features = ["derive"]}
regex = "1.3.9"